<resources>
    <string name="app_name">UniOpenRanking</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Bem-vindo ao StreetTennisRanking!</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_logout">Logout</string>
    <string name="action_settings_novo_jogador">Novo jogador</string>
    <string name="title_activity_login">UniOpenRankig</string>
    <string name="new_player">Novo Jogador</string>
    <string name="login_tip">username...</string>
    <string name="password_tip">password...</string>
    <string name="button_name">Sign in</string>
    <string name="button_name_adm">administrador</string>
    <string name="button_name_guest">Entrar como visitante</string>
    <string name="title_activity_players_list">PlayersListActivity</string>
    <string name="title_activity_player_detail">PlayerDetailActivity</string>
    <string name="title_activity_new_player">NewPlayerActivity</string>
    <string name="title_activity_player_ranking">Ranking de Tenistas</string>
</resources>
