<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id= "@+id/textWelcome"
              android:text="@string/welcome"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="@dimen/abc_text_size_display_1_material"
              android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="92dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name_adm"
        android:id="@+id/buttonLoginAdm"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/buttonGuest"
        android:layout_alignEnd="@+id/buttonGuest" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name_guest"
        android:id="@+id/buttonGuest"
        android:layout_above="@+id/buttonLoginAdm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="84dp"
        android:layout_alignRight="@+id/textWelcome"
        android:layout_alignEnd="@+id/textWelcome" />

</RelativeLayout>
